[tool.poetry]
name = "trade-job"
version = "0.1.0"
description = ""
authors = ["Alex Perrin"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.2"
alpaca-py = "^0.13.4"
boto3 = "^1.34.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
